[package]
name = "layered"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[features]
jemalloc = ["jemallocator"]

[dependencies]
jemallocator = { version = "0.3", optional = true }
febft = { git = "https://github.com/febft/febft", rev = "6038a8ed46bbd14193ffbb3aaadedf764957cdf2", features = ["bench"] }
#febft = { path = "/home/sugo/Documents/tese/febft/febft", rev = "6038a8ed46bbd14193ffbb3aaadedf764957cdf2", features = ["bench"] }
