[package]
name = "microbenchmarks"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[dependencies]
regex = "1"
rustls = "0.19"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0.6"
capnp = "0.14"
konst = "0.2"
lockfree = "0.5"

[dependencies.febft]
git = "https://github.com/febft/febft"
rev = "f96b9eb87f49bd913aac798eca32c34f70e2f9e2"
default-features = false
features = [
    "expose_impl",
    "async_runtime_tokio",
    "threadpool_crossbeam",
    "socket_tokio_tcp",
    "serialize_serde",
    "channel_async_channel_mpmc",
    "crypto_signature_ring_ed25519",
    "crypto_hash_blake3_blake3",
    "collections_randomstate_twox_hash"
]

[build-dependencies.capnpc]
version = "0.14"
