[package]
name = "signatures"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[dependencies]
#hacl-star = "0.1.0"
hacl-star-gcc = { git = "https://github.com/febft/rust-hacl-star" }
openssl = { version = "0.10.30", features = ["vendored"] }
sodiumoxide = "0.2.6"
ring = "0.16.15"
