[package]
name = "transport"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[dependencies]
async-std = "1.6.5"
tokio = { version = "0.3.2", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["compat"] }
futures = "0.3.7"
futures-timer = "3.0.2"
async-trait = "0.1.41"
lazy_static = "1.4.0"
