[package]
name = "transport"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[dependencies]
konst = "0.2"
async-std = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-timer = "3"
async-trait = "0.1"
lazy_static = "1"
