[package]
name = "microbenchmark-hotstuff"
version = "0.1.0"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = "*"
regex = "1"
intmap = "*"
rustls = "0"
rustls-pemfile = "2.0.0"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0"
capnp = "0.20.3"
chrono = "0.4"
getset = "*"
mimalloc = { version = "*", default-features = false }
fastrand = "*"
semaphores = { version = "0.1.2", git = "https://github.com/nuno1212s/Semaphores" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["std", "registry", "fmt", "json", "env-filter"] }
tracing-appender = { version = "*" }

mprober-lib = "0.1.7"

atlas-common = { path = "../../../Atlas/Atlas-Common" }
atlas-communication = { path = "../../../Atlas/Atlas-Communication" }
atlas-comm-mio = { path = "../../../Atlas/Atlas-Comm-MIO" }
atlas-smr-application = { path = "../../../Atlas/Atlas-SMR-Application" }
atlas-core = { path = "../../../Atlas/Atlas-Core" }
atlas-smr-replica = { path = "../../../Atlas/Atlas-SMR-Replica" }
atlas-smr-core = { path = "../../../Atlas/Atlas-SMR-Core" }
atlas-logging-core = { path = "../../../Atlas/Atlas-Logging-Core" }
atlas-client = { path = "../../../Atlas/Atlas-Client" }
atlas-metrics = { path = "../../../Atlas/Atlas-Metrics" }
atlas-persistent-log = { path = "../../../Atlas/Atlas-Persistent-Log" }
atlas-log-transfer = { path = "../../../Atlas/Atlas-Log-Transfer", features = ["serialize_serde"] }
atlas-decision-log = { path = "../../../Atlas/Atlas-Decision-Log", features = ["serialize_serde"] }
atlas-smr-execution = { path = "../../../Atlas/Atlas-SMR-Execution" }
atlas-view-transfer = { path = "../../../Atlas/Atlas-View-Transfer", features = ["serialize_serde"] }
atlas-reconfiguration = { path = "../../../Atlas/Atlas-Reconfiguration" }
atlas-default-configs = { path = "../../../Atlas/Atlas-Tools/atlas-default-configs" }
threshold-crypto-keygen = { path = "../../../Atlas/Atlas-Tools/threshold_crypto_keygen" }
febft-state-transfer = { path = "../../../febft/febft-state-transfer", features = ["serialize_serde"] }
clap = { version = "4.5.8", features = ["derive"] }
config = "0"
threshold_crypto = { version = "0.4.0", git = "https://github.com/poanetwork/threshold_crypto" }
log = "0.4.25"

[dependencies.hot-iron-oxide]
path = "../../../hot-iron-oxide"
features = ["serialize_serde"]

[build-dependencies.capnpc]
version = "0.20.1"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false
codegen-units = 16
lto = true
debug = false
debug-assertions = false
incremental = false

[profile.profiling]
inherits = "release"
debug = true