[package]
name = "microbenchmarks-async"
version = "0.1.0"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
regex = "1"
intmap = "2.0.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0.6"
capnp = "0.16.0"
konst = "0.3.4"
nolock = "0.3"
chrono = "0.4"
mimalloc = { version = "*", default-features = false }
fastrand = "1.7.0"
semaphores = { version = "0.1.2", git = "https://github.com/nuno1212s/Semaphores" }

mprober-lib = "0.1.7"
procinfo = "0.4.2"

febft-common = { path = "../../../febft/febft-common" }
febft-communication = { path = "../../../febft/febft-communication" }
febft-execution = { path = "../../../febft/febft-execution" }
febft-messages = { path = "../../../febft/febft-messages" }
febft-replica = { path = "../../../febft/febft-replica" }
febft-client = { path = "../../../febft/febft-client" }

[dependencies.febft-pbft-consensus]
path = "../../../febft/febft-pbft-consensus"
#git = "https://github.com/nuno1212s/febft.git"
#rev = "54e38aef8194302c6fcaa8a3d8d0a2d00727f518"
#default-features = false
#features = [
#    "expose_impl",
#    "async_runtime_tokio",
#    "threadpool_rayon",
#    "serialize_serde",
#    "socket_tokio_tcp",
#    "channel_flume_mpmc",
#    "channel_sync_crossbeam",
#    "channel_mixed_flume",
#    "channel_mult_custom_dump",
#    "crypto_signature_ring_ed25519",
#    "crypto_hash_blake3_blake3",
#    "collections_randomstate_fxhash"
#]

[build-dependencies.capnpc]
version = "0.16.2"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false
codegen-units = 1
lto = true
debug = false
debug-assertions = false
incremental = false
