[package]
name = "microbenchmarks-async"
version = "0.1.0"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
regex = "1"
intmap = "2.0.0"
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0.6"
capnp = "0.16.0"
konst = "0.3.4"
nolock = "0.3"
chrono = "0.4"
mimalloc = { version = "*", default-features = false }
fastrand = "1.7.0"
semaphores = { version = "0.1.2", git = "https://github.com/nuno1212s/Semaphores" }

mprober-lib = "0.1.7"
procinfo = "0.4.2"

atlas-common = { path = "../../../Atlas/atlas-common" }
atlas-communication = { path = "../../../Atlas/atlas-communication" }
atlas-execution = { path = "../../../Atlas/atlas-execution" }
atlas-core = { path = "../../../Atlas/atlas-core" }
atlas-replica = { path = "../../../Atlas/atlas-replica" }
atlas-client = { path = "../../../Atlas/atlas-client" }
atlas-metrics = { path = "../../../Atlas/atlas-metrics" }
atlas-persistent-log = { path = "../../../Atlas/atlas-persistent-log" }
atlas-log-transfer = { path = "../../../Atlas/atlas-log-transfer", features = ["serialize_serde"] }
febft-state-transfer = { path = "../../../febft/febft-state-transfer", features = ["serialize_serde"] }

[dependencies.febft-pbft-consensus]
path = "../../../febft/febft-pbft-consensus"
features = ["serialize_serde"]
#git = "https://github.com/nuno1212s/febft.git"
#rev = "54e38aef8194302c6fcaa8a3d8d0a2d00727f518"
#default-features = false
#features = [
#    "expose_impl",
#    "async_runtime_tokio",
#    "threadpool_rayon",
#    "serialize_serde",
#    "socket_tokio_tcp",
#    "channel_flume_mpmc",
#    "channel_sync_crossbeam",
#    "channel_mixed_flume",
#    "channel_mult_custom_dump",
#    "crypto_signature_ring_ed25519",
#    "crypto_hash_blake3_blake3",
#    "collections_randomstate_fxhash"
#]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies.capnpc]
version = "0.16.2"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false
codegen-units = 16
lto = true
debug = false
debug-assertions = false
incremental = false
