[package]
name = "themis-microbenchmark-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themis-core = {path = "../../../themis/themis-core"}
themis-pbft = {path = "../../../themis/themis-pbft"}
# themis-quic = {path = "../../themis-quic"}
themis-client = {path = "../../../themis/themis-client"}
futures-util = "0.3.19"
log = "0.4.14"
bytes = "1.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
serde = "1.0.134"
fnv = "1.0.7"
clap = { version = "4.1.6", features = ["derive"] }
rmp-serde = "1.0.0"
atty = "0.2.14"
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread"] }
chrono = "0.4"
konst = "0.3.4"
crossbeam-utils = "0.8.14"