[package]
name = "microbenchmarks"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[dependencies]
regex = "1"
intmap = "0.7"
rustls = "0.19"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0.6"
capnp = "0.14"
konst = "0.2"
nolock = "0.3"
chrono = "0.4"
mimalloc = { version = "*", default-features = false }

[dependencies.febft]
path = "../../../febft"
#git = "https://github.com/febft/febft"
#rev = "54e38aef8194302c6fcaa8a3d8d0a2d00727f518"
default-features = false
features = [
    "expose_impl",
    "async_runtime_tokio",
    "threadpool_crossbeam",
    "socket_tokio_tcp",
    "channel_custom_dump",
    "crypto_signature_ring_ed25519",
    "crypto_hash_blake3_blake3",
    "collections_randomstate_fxhash"
]

[build-dependencies.capnpc]
version = "0.14"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false
codegen-units = 1
lto = true
debug = false
debug-assertions = false
incremental = false
