[package]
name = "microbenchmarks"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>", "Nuno Neto <up201703898@fc.up.pt>"]
edition = "2018"

[dependencies]
regex = "1"
intmap = "2.0.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0.6"
capnp = "0.16.0"
konst = "0.2"
nolock = "0.3"
chrono = "0.4"
mimalloc = { version = "*", default-features = false }
mprober-lib = "0.1.7"
febft-replica = { path = "../../../febft/febft-replica"}
febft-client = {path = "../../../febft/febft-client"}
febft-common = {path = "../../../febft/febft-common"}
febft-consensus = {path = "../../../febft/febft-consensus"}
febft-execution = {path = "../../../febft/febft-execution"}
febft-communication = {path = "../../../febft/febft-communication"}

[build-dependencies.capnpc]
version = "0.16.2"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false
codegen-units = 1
lto = true
debug = false
debug-assertions = false
incremental = false
