[package]
name = "microbenchmarks-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
intmap = "2.0.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
futures = "0.3"
oneshot = "0.1"
num_cpus = "1"
futures-timer = "3"
rand_core = "0.6"
capnp = "0.14"
konst = "0.2"
nolock = "0.3"
chrono = "0.4"
mimalloc = { version = "*", default-features = false }
mprober-lib = "0.1.7"
fastrand = "1.7.0"
semaphores = {version = "0.1.2", git = "https://github.com/nuno1212s/Semaphores" }

[dependencies.febft]
path = "../../../febft"
#git = "https://github.com/nuno1212s/febft.git"
#rev = "54e38aef8194302c6fcaa8a3d8d0a2d00727f518"
default-features = false
features = [
    "expose_impl",
    "async_runtime_tokio",
    "threadpool_rayon",
    "socket_async_std_tcp",
    "channel_flume_mpmc",
    "channel_sync_crossbeam",
    "channel_mixed_flume",
    "channel_mult_custom_dump",
    "crypto_signature_ring_ed25519",
    "crypto_hash_blake3_blake3",
    "collections_randomstate_fxhash"
]

[build-dependencies.capnpc]
version = "0.14"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false
codegen-units = 1
lto = true
debug = false
debug-assertions = false
incremental = false
