[package]
name = "service"
version = "0.1.0"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>"]
edition = "2018"

[dependencies]
capnp = "0.14"
rustls = "0.19"
futures = "0.3"
oneshot = "0.1"

[dependencies.febft]
git = "https://github.com/febft/febft"
rev = "4e75926c515fa20382030bafc32646501d2c9532"
default-features = false
features = [
    "expose_impl",
    "async_runtime_tokio",
    "threadpool_crossbeam",
    "socket_tokio_tcp",
    "channel_futures_mpsc",
    "crypto_signature_ring_ed25519",
    "crypto_hash_blake3_blake3",
    "collections_randomstate_twox_hash"
]

[build-dependencies.capnpc]
version = "0.14"
