[package]
name = "ansible-compose-generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "*"
anyhow = "*"
thiserror = "*"
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
config = "*"
linked-hash-map = "*"